Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/OverrideNo.out
OverrideNo.java:16:5: compiler.err.method.does.not.override.superclass
1 error
